# takeoff-haystack

./: README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
takeoff_haystack/: __init__.py
tests/: test_integration.py
